<resources>
    <string name="app_name">scooterhelper0608</string>
    <string name="button1">保養</string>
    <string name="button2">停車位置</string>
    <string name="button3">油耗</string>
    <string name="button4">倒車警報</string>
    <string name="read_bt">偵測</string>
    <string name="textView">Gogoro</string>
    <string name="date_textView">日期</string>
    <string name="time_textView">時間</string>
    <string name="tvResult"></string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>